
# emerge -cav homeassistant
# emerge -cav dev-python/pydispatcher
# emerge -1tav =app-misc/homeassistant --autounmask=y

2020-09-16
  * bump aioshelly-0.3.2
  * bump sentry-sdk-0.17.6
  * bump youtube_dl-2020.9.14
  * bump statsd-3.3.0
  * bump synology-srm-0.2.0
  * restore google-api-python-client-1.6.4 (still needed)
  * added aio-geojson-geonetnz-volcano-0.5

2020-09-15
  * update platformio-5.0.1
  * update esphome-1.15.0
  * update esphome-9999
  * update bellows-0.20.2
  * update gogogate2-api-2.0.2
  * update pytest-6.0.2
  * update sentry-sdk-0.17.5
  * bump home-assistant-frontend-20200915.0
  * update icmplib-1.2, change LICENSE="LGPL-3"
  * fix sonarr https://git.edevau.net/onkelbeh/HomeAssistantRepository/issues/164
  * pymata-express, fix https://git.edevau.net/onkelbeh/HomeAssistantRepository/issues/150
  * pyatag, fix https://git.edevau.net/onkelbeh/HomeAssistantRepository/issues/144
  * pywemo, missing releases added at origin, fork removed
  * bump pywemo-0.5.0, SRC now is Pypi

2020-09-14 homeassistant-0.115.0_beta9
  * update PyGithub-1.43.8
  * update PyGithub-1.52
  * update evohome-async-0.3.5
  * restore (still needed) pexpect-4.6.0 from archive
  * add pybluez-0.22
  * add pyownet-0.10.0
  * downgrade pyzabbix-0.7.4
  * update iammeter-0.1.7
  * bump home-assistant-frontend-20200912.0
  * update androidtv-0.0.50
  * update pyhaversion-3.4.0, filed an issue at https://github.com/ludeeus/pyhaversion/issues/14
  * update pydeconz-73
  * update coverage-5.3
  * add rpi-bad-power-0.0.3
  * update aiohomekit-0.2.53
  * add more older reqs reported by new test script:
    - add transmissionrpc-0.11
    - add stookalert-0.1.4
    - downgrade smart-meter-texas-0.4.0
    - update ephem-3.7.7.0
    - update ephem-3.7.7.1
    - add sharkiqpy-0.1.8
    - add py-schluter-0.1.7
    - add roonapi-0.0.22
    - restore httplib2-0.10.3-r1 from archive (for dev-python/RtmAPI) (use at your own risk!)
    - correct dep in RtmAPI-0.7.2-r1 (use at your own risk!)