@@ -1,5 +1,0 @@
-DIST speedtest-cli-2.1.1.tar.gz 23981 BLAKE2B aadc0c1c66cdcebddec8fd4cf6dcb47949e4c6e035cb8e963e3b597c7d77237b0ba63ad9b08c3c8159a8b1d127adb992bc06275c0fab09e11c88e073a9a4c0cc SHA512 550ac6261dac132c18d710aa79d6f1f70aaa3a2d583c022e220dd511982c53b5b1a0db15ce844e990ae374841a26e7465b8a292cc4c061e82edd341f38853e40
-DIST speedtest-cli-2.1.2.tar.gz 24741 BLAKE2B 09418e34d92e0f91d7482ba4cc46cf812b43f25118c71a8e5127265f62ef93bb428ebfe5cc65a73ea8284fb7bfe1a99cc670d5d186f9e82284a11390f6e66960 SHA512 f2eb125116f42075d3248e1c0590cce4f822f383ff7c54c158504b16de72bf35b35d55a78014413a95a5f5bafa98c71c3ea011f20f480f1db272d6e8800c40bd
-EBUILD speedtest-cli-2.1.1.ebuild 720 BLAKE2B 89eb79c95daf7f497a6a6604b1041b22217c873072a8a4fb79de580eca74690e676887a7482b0ece9988e209a078363d7164c7d1e92c041ab572527cfcf2e777 SHA512 d45725ee9fbd901be7b6b45ccd20b9fe5d3e358f6232ebd8a381a4d31b36a2183a93b04882e0fe057a6736fda5e9437b99accc7c3d0780844fb72c8d39e7b0b8
-EBUILD speedtest-cli-2.1.2.ebuild 727 BLAKE2B 42292b3aeb7dc0f3bd04eb17c83b36eff86f078238ac49e4b648adf4db22bebea209fc9daec2afdbee915ccb9757c7d78670787deac3ed8f578c6b829b604535 SHA512 2c6f42ad95ee6d38a65fc481d72e148cd34f314064e922bf4532d79e1de031082fd8e37dd6a25ef0ca9ba21f83c75753c091e2e95fad8bd0fa6c9d3b7e2a999a
-MISC metadata.xml 450 BLAKE2B 43b6b4d169b1d45e4cd2749183d848db546ba6966bde002f12456f3039a0dc9397e3eab4c55dcb4b37a3254de7ab974340db50f7a4ad4adb45857c134f3dd0e4 SHA512 61a5da531a24f7eb13a8185380c2c9f68deb61a310a592ddf5867b47d497cf6b88c47438747ebac58c84d03ec2e4e3169ed4ae7927bee547253295f45de3d1c6
