@@ -1,15 +1,0 @@
-<?xml version='1.0' encoding='UTF-8'?>
-<!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
-<pkgmetadata>
-  <maintainer type="project">
-    <email>b@edevau.net</email>
-    <name>Andreas Billmeier</name>
-  </maintainer>
-  <upstream>
-    <remote-id type="pypi">speedtest-cli</remote-id>
-    <maintainer status="unknown">
-      <email>matt@sivel.net</email>
-      <name>Matt Martz</name>
-    </maintainer>
-  </upstream>
-</pkgmetadata>
