@@ -1,30 +1,0 @@
-# Copyright 1999-2020 Gentoo Authors
-# Distributed under the terms of the GNU General Public License v2
-
-EAPI="7"
-
-PYTHON_COMPAT=( python3_{5,6,7} )
-
-inherit distutils-r1
-
-DESCRIPTION="Command line interface for testing internet bandwidth using speedtest.net"
-HOMEPAGE="https://github.com/sivel/speedtest-cli https://pypi.org/project/speedtest-cli/"
-SRC_URI="mirror://pypi/${P:0:1}/${PN}/${P}.tar.gz"
-
-LICENSE="Apache-2.0"
-SLOT="0"
-KEYWORDS="~amd64 ~x86 ~amd64-linux ~x86-linux"
-IUSE="test"
-
-RDEPEND=""
-DEPEND="${REDEPEND}
-	dev-python/setuptools[${PYTHON_USEDEP}]
-	test? (
-		dev-python/nose[${PYTHON_USEDEP}]
-		dev-python/pytest[${PYTHON_USEDEP}]
-	)"
-
-python_test() {
-	nosetests --verbose || die
-	py.test -v -v || die
-}
